--- a/.github/workflows/docker-image-push.yml
+++ b/.github/workflows/docker-image-push.yml
@@ -23,7 +23,7 @@ jobs:
         uses: docker/setup-qemu-action@v2.0.0
         with:
           image: tonistiigi/binfmt:latest
-          platforms: linux/amd64,linux/arm64/v8,linux/arm/v7,linux/arm/v6
+          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2.0.0
       - name: Login to DockerHub
@@ -37,6 +37,6 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64,linux/arm/v7,linux/arm/v6
+          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
           push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
